--- a/src/pages/developerTools/index.astro
+++ b/src/pages/developerTools/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
-import DeveloperToolCard from "./DeveloperToolCard.astro";
+import DeveloperToolCard from "../../components/DeveloperToolCard/DeveloperToolCard.astro";
 import "./index.css";
 ---
 
