Move developer toolspage related file to src/pages/developerTools/

--- a/src/pages/developerTools/index.astro
+++ b/src/pages/developerTools/index.astro
@@ -4,6 +4,8 @@ import DeveloperToolCard from "./DeveloperToolCard.astro";
 import "./index.css";
 ---
 
+<script src="./_developerTools.js"></script>
+
 <BaseLayout>
   <meta
     slot="meta"
