Move src/pages/404.astro to src/pages/404/index.astro

--- a/src/pages/404/index.astro
+++ b/src/pages/404/index.astro
@@ -1,5 +1,5 @@
 ---
-import ErrorPage from "../components/ErrorPage.astro";
+import ErrorPage from "../../components/ErrorPage.astro";
 ---
 
 <!DOCTYPE html>
