Move src/pages/about.astro to src/pages/about/index.astro

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,6 +1,6 @@
 ---
 import "/src/styles/home.css";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
