--- a/src/pages/request_device/index.astro
+++ b/src/pages/request_device/index.astro
@@ -1,6 +1,6 @@
 ---
 import "/src/styles/home.css";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
